--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task-2: The form</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <ul class="form__nav--list">
-        <li class="form__nav--link">
-            <a class="form__nav--link" href="./index.html">Go to Homepage</a>
-        </li>
+      <li class="form__nav--link">
+        <a class="form__nav--link" href="./index.html">Go to Homepage</a>
+      </li>
 
-        <li class="form__nav--link">
-            <a class="form__nav--link" href="./1-gallery.html">Go to the gallery's page</a>
-        </li>
+      <li class="form__nav--link">
+        <a class="form__nav--link" href="./1-gallery.html"
+          >Go to the gallery's page</a
+        >
+      </li>
     </ul>
 
     <section class="theform">
-        <form class="feedback-form" autocomplete="off"> 
-            <label>
-              Email
-              <input type="email" name="email" autofocus /> 
-            </label>
-            <label>
-              Message
-              <textarea name="message" rows="8"></textarea>
-            </label>
-            <button type="submit">Submit</button>
-          </form>
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
     </section>
 
-    <p>Питання: чому в мене не підтягуються штрифти?</br>скопіював з макету назву, вставив лінк з гугл-фонтс і нічого =( </p>
-    <p> color: #2E2F42;</br>
-        font-family: Montserrat;</br>
-        font-size: 16px;</br>
-        font-style: normal;</br>
-        font-weight: 400;</br>
-        line-height: 24px; /* 150% */</br>
-        letter-spacing: 0.64px;
-    </p>
-
-      <script type="module" src="./js/2-form.js"></script>
-</body>
+    <script type="module" src="./js/2-form.js"></script>
+  </body>
 </html>
