--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 9</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="./partials/header.html" />
 
-    <!-- <load ="./1-gallery.html" /> -->
-
-    <!-- <load ="./2-form.html" /> -->
-
-    <!-- <script type="module" src="./js/1-gallery.js"></script> -->
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
